--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
+		"mdsvex": "^0.9.8",
+		"node-sass": "^6.0.1",
 		"prettier": "^2.4.1",
 		"prettier-plugin-svelte": "^2.4.0",
 		"svelte": "^3.42.6",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.9.4",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3",
-		"mdsvex": "^0.9.8"
+		"typescript": "^4.4.3"
 	},
 	"type": "module"
 }
